search bar sitting next to posts, and correctly wrapping with decreased window size

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   margin-right: auto;
   width: 300px;
 }
+
+.Feed {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
