--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,6 +1,5 @@
 .SearchBar {
   display: flex;
-  margin-left: 50px;
 }
 
 .SearchForm {
